# SkillHub

./: .env.example  .eslintrc.json  .gitignore  AGENT.md  CLAUDE.md  LICENSE  PRD.md  README.md  dev.bat  package-lock.json  package.json  run_tests.bat  setup_env.sh  test_cl.bat  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-05-skillforge-p0.md  2026-04-06-ux-enhancement-plan.md
docs/superpowers/specs/: 2026-04-05-skillforge-design.md  2026-04-06-ux-enhancement-design.md  2026-04-07-online-discovery-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: agent_cmd.rs  config_cmd.rs  link_cmd.rs  mod.rs  online_cmd.rs  search_cmd.rs  skill_cmd.rs
src-tauri/src/core/: agent.rs  cache.rs  claude_desktop.rs  config.rs  git_clone.rs  github_source.rs  installer.rs  mod.rs  registry.rs  search.rs  source.rs  symlink.rs
src/components/agents/: AgentPanel.tsx
src/components/dashboard/: Dashboard.tsx  MatrixGrid.tsx  StatsCards.tsx  UnmanagedSkillsBanner.tsx
src/components/install/: InstallDialog.test.tsx  InstallDialog.tsx
src/components/layout/: AgentBar.tsx  MainLayout.tsx
src/components/search/: SearchBar.tsx  SearchResults.tsx
src/components/settings/: Settings.tsx
src/hooks/: useInvoke.ts  useKeyboard.test.tsx  useKeyboard.ts
src/stores/: useAppStore.ts  useThemeStore.ts  useToastStore.ts
src/types/: index.ts
src/utils/: markdown.ts
(+6 files in other folders)
